--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,9 +2,18 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
 }
 
-/* line 5, ../sass/styles.scss */
+/* line 6, ../sass/styles.scss */
+h4 {
+  color: #fff;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 300;
+}
+
+/* line 12, ../sass/styles.scss */
 .flip {
   -webkit-perspective: 800;
   width: 25%;
@@ -13,52 +22,50 @@ html, body {
   display: inline-block;
   float: left;
 }
-/* line 12, ../sass/styles.scss */
+/* line 19, ../sass/styles.scss */
 .flip img {
   width: 100%;
   height: auto;
   display: inherit;
 }
-/* line 17, ../sass/styles.scss */
+/* line 24, ../sass/styles.scss */
 .flip .card {
   height: auto;
   -webkit-transform-style: preserve-3d;
   -webkit-transition: 0.4s;
 }
-/* line 21, ../sass/styles.scss */
+/* line 28, ../sass/styles.scss */
 .flip .card .face {
   width: 100%;
   position: absolute;
   -webkit-backface-visibility: hidden;
   z-index: 2;
-  font-family: Georgia;
-  font-size: 3em;
   text-align: center;
   cursor: pointer;
 }
-/* line 31, ../sass/styles.scss */
+/* line 36, ../sass/styles.scss */
 .flip .card .front {
   z-index: 1;
   background: black;
   color: white;
 }
-/* line 36, ../sass/styles.scss */
+/* line 41, ../sass/styles.scss */
 .flip .card .back {
   -webkit-transform: rotatey(-180deg);
   background: #009597;
   color: #fff;
 }
-/* line 40, ../sass/styles.scss */
+/* line 45, ../sass/styles.scss */
 .flip .card .back img {
   visibility: hidden;
 }
-/* line 43, ../sass/styles.scss */
+/* line 48, ../sass/styles.scss */
 .flip .card .back .back-details {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 5px;
 }
-/* line 49, ../sass/styles.scss */
+/* line 54, ../sass/styles.scss */
 .flip .card.flipped {
   -webkit-transform: rotatey(-180deg);
 }
