--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -77,9 +77,21 @@ strong {
 .details-row {
   display: inline-block;
   width: 100%;
+  margin: 5px 0;
 }
 /* line 64, ../sass/styles.scss */
+.details-row span {
+  display: inline-block;
+}
+/* line 68, ../sass/styles.scss */
 .details-row.details-row-1 span {
   width: 115px;
-  display: inline-block;
+}
+/* line 73, ../sass/styles.scss */
+.details-row.details-row-2 .sqft {
+  width: 115px;
+}
+/* line 76, ../sass/styles.scss */
+.details-row.details-row-2 .beds, .details-row.details-row-2 .baths {
+  width: 75px;
 }
