--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -60,6 +60,11 @@ strong {
     }
   }
 }
+.front-details {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 .details-row {
   display: inline-block;
   width: 100%;
