--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -64,6 +64,19 @@ strong {
   position: absolute;
   bottom: 0;
   left: 0;
+  width: 100%;
+  h4 {
+    margin-bottom: 5px;
+  }
+  .front-icons {
+    display: inline-block;
+    img {
+      display: inline-block;
+      width: 24px;
+      height: 14px;
+      margin-right: 10px;
+    }
+  }
 }
 .details-row {
   display: inline-block;
