--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -65,16 +65,26 @@ strong {
   bottom: 0;
   left: 0;
   width: 100%;
+  padding: 5px 15px;
   h4 {
     margin-bottom: 5px;
   }
   .front-icons {
     display: inline-block;
+    width: 100%;
     img {
       display: inline-block;
       width: 24px;
       height: 14px;
       margin-right: 10px;
+      &.front-bath {
+        width: 20px;
+        height: 14px;
+      }
+    }
+    .front-icon {
+      display: inline-block;
+      margin-right: 15px;
     }
   }
 }
