--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -84,47 +84,59 @@ strong {
   bottom: 0;
   left: 0;
   width: 100%;
+  padding: 5px 15px;
 }
-/* line 68, ../sass/styles.scss */
+/* line 69, ../sass/styles.scss */
 .front-details h4 {
   margin-bottom: 5px;
 }
-/* line 71, ../sass/styles.scss */
+/* line 72, ../sass/styles.scss */
 .front-details .front-icons {
   display: inline-block;
+  width: 100%;
 }
-/* line 73, ../sass/styles.scss */
+/* line 75, ../sass/styles.scss */
 .front-details .front-icons img {
   display: inline-block;
   width: 24px;
   height: 14px;
   margin-right: 10px;
 }
+/* line 80, ../sass/styles.scss */
+.front-details .front-icons img.front-bath {
+  width: 20px;
+  height: 14px;
+}
+/* line 85, ../sass/styles.scss */
+.front-details .front-icons .front-icon {
+  display: inline-block;
+  margin-right: 15px;
+}
 
-/* line 81, ../sass/styles.scss */
+/* line 91, ../sass/styles.scss */
 .details-row {
   display: inline-block;
   width: 100%;
   margin: 5px 0;
 }
-/* line 85, ../sass/styles.scss */
+/* line 95, ../sass/styles.scss */
 .details-row span {
   display: inline-block;
 }
-/* line 89, ../sass/styles.scss */
+/* line 99, ../sass/styles.scss */
 .details-row.details-row-1 span {
   width: 115px;
 }
-/* line 94, ../sass/styles.scss */
+/* line 104, ../sass/styles.scss */
 .details-row.details-row-2 .sqft {
   width: 115px;
 }
-/* line 97, ../sass/styles.scss */
+/* line 107, ../sass/styles.scss */
 .details-row.details-row-2 .beds, .details-row.details-row-2 .baths {
   width: 75px;
 }
 
-/* line 102, ../sass/styles.scss */
+/* line 112, ../sass/styles.scss */
 .bottom-bar {
   display: inline-block;
   position: absolute;
@@ -135,14 +147,14 @@ strong {
   padding: 14px 10px;
   background-color: #217079;
 }
-/* line 111, ../sass/styles.scss */
+/* line 121, ../sass/styles.scss */
 .bottom-bar a {
   font-family: 'Arapey', serif;
   font-size: 20px;
   color: #fff;
   text-decoration: none;
 }
-/* line 116, ../sass/styles.scss */
+/* line 126, ../sass/styles.scss */
 .bottom-bar a:hover {
   text-decoration: underline;
 }
